--- a/css/styles.css
+++ b/css/styles.css
@@ -579,16 +579,18 @@ img.form-img{
     background: var(--primary-color);
 }
 
+::placeholder{
+    font-size: 1rem;
+}
+
+
 
 @media (max-width:768px) {
     img.form-img{
-        margin: -6rem 0 0 0;
+        margin: -3rem 0 0 0;
     }
 }
 
-::placeholder, input[type="date"]{
-    font-size: 1rem;
-}
 
 
 
